overflow content fixed

--- a/Frontend Takehome/src/Components/AllTask/Hold.css
+++ b/Frontend Takehome/src/Components/AllTask/Hold.css
@@ -55,12 +55,15 @@
 
 .task-card {
 	width: 250px;
+	
 	background-color: #f0f0f0;
 	border-radius: 8px;
 	padding: 16px;
 	margin-bottom: 16px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	transition: transform 0.3s ease;
+	overflow-wrap: break-word;
+    
 }
 
 .task-card:hover {
